package maidsafe.protobuf;

message SignedValue {
  required bytes value = 1;
  required bytes signature = 2;
}
